@@ -4391,6 +4391,14 @@
       <text>Broken</text>
     </string>
     <string>
+      <key>Label_SkillGroup_Disabled</key>
+      <text>Disabled</text>
+    </string>
+    <string>
+      <key>Label_SkillGroup_DisabledBy</key>
+      <text>Disabled by:</text>
+    </string>
+    <string>
       <key>Label_ActiveSkills</key>
       <text>Active Skills</text>
     </string>
