@@ -43,6 +43,7 @@ Application Changes:
 - When using Chummer in a non-English language, contact controls will no longer attempt to immediately translate and then re-translate the contents of text fields after every single possible change. Fixes #4450.
 - Gear that can act as ammunition without being in the ammunition category is now properly treated as such when exporting character information, printing sheets, or buying more ammo. Fixes #4457.
 - Attempting to add a weapon to a weapon mount that cannot mount any weapons no longer crashes Chummer. Fixes #4448.
+- Skill groups now show when they have been disabled by an improvement such as Uncouth.
 
 Data Changes:
 - Consolidated all German Data Changes custom data and all German-exclusive content of sourcebooks printed in English into a single German Data Changes c.ustom data folder.
@@ -153,6 +154,8 @@ Changed/New Strings:
 - Label_SelectMentor_Bonus
 - String_Saving
 - String_Saving_Pattern
+- Label_SkillGroup_Disabled
+- Label_SkillGroup_DisabledBy
 
 Build 214
 Application Fixes:
